--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2018-beta-5b"
+    id "jaci.openrio.gradle.GradleRIO" version "2018.01.06b"
 }
 
 repositories {
@@ -26,6 +26,8 @@ deploy {
 
 dependencies {
     compile wpilib()
+    compile navx()
+    compile ctre()
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
