--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ deploy {
     artifacts {
         artifact("frcJava", jaci.openrio.gradle.frc.FRCJavaArtifact) {
             targets << "roborio"
+            if (project.hasProperty("debug")) {
+                project.logger.lifecycle("\\ Debugging has been enabled!")
+                project.logger.lifecycle("\\ When deployed, will wait for remote debugger before launching robot code.")
+                debug = true
+            }
         }
     }
 }
