--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile navx()
     compile ctre()
 
+    compile 'com.google.code.gson:gson:2.8.2'
+
     compile project("dependencies:lib")
 }
 
