--- a/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
+++ b/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
@@ -1,10 +1,3 @@
-WHEELBASE_WIDTH=0.55245
-WHEEL_DIAMETER=0.1016
-
-MAX_VELOCITY=1;
-MAX_ACCELERATION=2
-MAX_CENTRI_ACCEL=1
-
 Drive.left.channelA=5
 Drive.left.channelB=6
 Drive.left.reversedDirection=true
@@ -13,7 +6,8 @@ Drive.right.channelA=7
 Drive.right.channelB=8
 Drive.right.reversedDirection=false
 Drive.right.distancePerPulseInFeet=0.043946541
-Drive.wheelbase_width_ft=9.0
+Drive.wheelbase_width_ft=2.6233
+Drive.wheel_diameter_ft=0.6666
 
 RobotSide.left.master=1
 RobotSide.left.slave=2
