more constants in .properties

--- a/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
+++ b/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
@@ -19,3 +19,6 @@ CheesyDriveHelper.throttleDeadband=0.02
 # idle range (-0.02, 0.02) // range (-1.0,1.0)
 CheesyDriveHelper.wheelDeadband=0.02
 CheesyDriveHelper.turnSensitivity=1.0
+
+# 200Hz
+SubsystemManager.stepPeriod=0.005
