Add timer that counts down till when the driver needs to climb

--- a/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
+++ b/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
@@ -22,3 +22,6 @@ CheesyDriveHelper.turnSensitivity=1.0
 
 # 200Hz
 SubsystemManager.stepPeriod=0.005
+
+# seconds it takes to climb
+Climber.climbingTime=10.0
