RobotSettings now has a specific method to get a property that represents a channel.
getChannelAndRegister() ensure that no 2 subsystems try to reuse the same channel.

--- a/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
+++ b/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
@@ -8,6 +8,8 @@ Drive.right.reversedDirection=false
 Drive.right.distancePerPulseInFeet=0.043946541
 Drive.wheelbase_width_ft=2.6233
 Drive.wheel_diameter_ft=0.6666
+Drive.GearShifter.highGearChannel=
+Drive.GearShifter.lowGearChannel=
 
 RobotSide.left.master=1
 RobotSide.left.slave=2
