move gearshifter to Robot - at @danappelxx request

--- a/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
+++ b/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
@@ -8,8 +8,8 @@ Drive.right.reversedDirection=false
 Drive.right.distancePerPulseInFeet=0.043946541
 Drive.wheelbase_width_ft=2.6233
 Drive.wheel_diameter_ft=0.6666
-Drive.GearShifter.highGearChannel=
-Drive.GearShifter.lowGearChannel=
+GearShifter.highGearChannel=1
+GearShifter.lowGearChannel=2
 
 RobotSide.left.master=1
 RobotSide.left.slave=2
