Drop 'Robot' prefixes (it's redundant)

--- a/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
+++ b/src/main/resources/org/team114/ocelot/settings/RobotSettings.properties
@@ -11,10 +11,10 @@ Drive.wheel_diameter_ft=0.6666
 GearShifter.highGearChannel=0
 GearShifter.lowGearChannel=1
 
-RobotSide.left.master=1
-RobotSide.left.slave=2
-RobotSide.right.master=10
-RobotSide.right.slave=9
+DriveSide.left.master=1
+DriveSide.left.slave=2
+DriveSide.right.master=10
+DriveSide.right.slave=9
 
 # idle range (-0.02, 0.02) // range (-1.0,1.0)
 CheesyDriveHelper.throttleDeadband=0.02
