--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,5 +32,8 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
-      # run tests!
+      # run tests
       - run: gradle test
+
+      # compile javadoc
+      - run: gradle javadoc
