Compile project as a separate step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      # compile project
+      - run: gradle build
+
       # run tests
       - run: gradle test
 
