Make necessary alterations for code to run
* Change source compatibility to 1.8 to fix incompatible versions
* Remove upper and lower limit switches, because we can't figure out
  how to access them
* Fix NPE from late initialization of RobotState

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id "jaci.openrio.gradle.GradleRIO" version "2018.01.22"
 }
 
+sourceCompatibility = 1.8
+
 repositories {
     jcenter()
 }
