--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ plugins {
     id "java"
     id "eclipse"
     id "idea"
-    id "jaci.openrio.gradle.GradleRIO" version "2018.01.22"
+    id "jaci.openrio.gradle.GradleRIO" version "2018.02.17"
+    id "net.ltgt.errorprone" version "0.0.13"
 }
+
+
+sourceCompatibility = 1.8
 
 repositories {
     jcenter()
@@ -16,7 +20,6 @@ deploy {
         target("roborio", jaci.openrio.gradle.frc.RoboRIO) {
             team = 114
         }
-
     }
     artifacts {
         artifact("frcJava", jaci.openrio.gradle.frc.FRCJavaArtifact) {
@@ -36,14 +39,14 @@ dependencies {
     compile ctre()
     compile openrio.powerup.matchData()
 
-    compile group: 'org.ejml', name: 'ejml-all', version: '0.32'
+    compile group: 'org.ejml', name: 'ejml-all', version: '0.33'
 
     compile 'com.google.code.gson:gson:2.8.2'
 
     // nullable annotations
-    compile (
-        ['com.google.code.findbugs:jsr305:2.0.1'],
-        ['com.google.code.findbugs:annotations:2.0.1']
+    compile(
+            ['com.google.code.findbugs:jsr305:2.0.1'],
+            ['com.google.code.findbugs:annotations:2.0.1']
     )
 
     // testing and mocking
@@ -60,5 +63,5 @@ jar {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = "4.4.1"
+    gradleVersion = "4.5.1"
 }
