--- a/build.gradle
+++ b/build.gradle
@@ -49,8 +49,17 @@ dependencies {
     )
 
     // testing and mocking
-    testCompile 'junit:junit:4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.1.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+
     testCompile "org.mockito:mockito-core:2.+"
+}
+
+test {
+    useJUnitPlatform()
+    // tell gradle to always rerun tests
+    outputs.upToDateWhen { false }
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
