--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,14 @@ dependencies {
             ['com.google.code.findbugs:annotations:2.0.1']
     )
 
+    // dagger
+    compile 'com.google.dagger:dagger:2.+'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.+'
+
+    compileOnly 'com.google.auto.factory:auto-factory:1.0-beta5'
+    annotationProcessor 'com.google.auto.factory:auto-factory:1.0-beta5'
+
+
     // testing and mocking
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.1.0'
@@ -68,7 +76,14 @@ test {
 
 tasks.withType(JavaCompile) {
     options.compilerArgs += ["-Xep:FallThrough:ERROR"]
+    options.compilerArgs += ["-s", "${buildDir}/gen"]
 }
+idea {
+    module {
+        sourceDirs += file("${buildDir}/gen")
+    }
+}
+
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
 // in order to make them all available at runtime. Also adding the manifest so WPILib
